# ballsbot

./: .env  .gitignore  README.md  configuration.txt  odometry-fix-01-unet.py  odometry-fix-02-dense.py
ballsbot_detection/: README.md
ballsbot_detection/msg/: Detection.msg  DetectionsList.msg
ballsbot_detection/src/: publisher.cpp
ballsbot_laser_ranging_sensor/: CMakeLists.txt  package.xml
ballsbot_laser_ranging_sensor/msg/: LaserDistance.msg
ballsbot_laser_ranging_sensor/src/: GPIOManager.cpp  GPIOManager.h  VL53L0X.cpp  VL53L0X.h  address_changer.cpp  publisher.cpp
ballsbot_magnetic_encoder/: CMakeLists.txt  README.md
ballsbot_magnetic_encoder/src/: ams_as5048b.cpp  ams_as5048b.h  magnetic_encoder.cpp  magnetic_encoder_driver.h
ballsbot_manipulator/: .gitignore  CMakeLists.txt  ballsbot_manipulator.h  ballsbot_manipulator.pyx  eigen.pxd  setup.py  test.cpp
cpp/: CMakeLists.txt  ballsbot_cpp.pxd  ballsbot_cpp.pyx  setup.py  test.cpp
cpp/ballsbot/: cam_detector.cpp  cam_detector.h  common.h  geometry.cpp  geometry.h  grid.cpp  grid.h  point_cloud.h  uffssd.h
cpp_detection/: CMakeLists.txt  ballsbot_detection.cpp  ballsbot_detection.pxd  ballsbot_detection.pyx  setup.py
cpp_routing/: CMakeLists.txt  ballsbot_cpp.pxd  ballsbot_cpp.pyx  setup.py
cpp_routing/ballsbot/: grid.cpp
data/: ballsbot_config_override.py  cert.config  one-ten-ballsbot_config_override.py  rc.local
detection_model/: README.md
docker/: Dockerfile
images/: ballsbot 1.10.drawio  ballsbot t200.drawio  ballsbot t208.drawio
lib/ballsbot/: camera.py  cloud_generator.py  cloud_to_lines.py  drawing.py  emulation.py  geometry.py  grid.py  imu.py  keypoints.py  lidar.py  ndt.py  odometry.py  odometry_fix.py  servos.py  session.py  tracking.py  utils.py
notebooks/: main-ai.ipynb  main-coords.ipynb  main.ipynb  two-cameras-and-lidar-calibration-edet.ipynb
python/: .pylintrc
python/notebooks/: calibrate-meters-per-rotation.ipynb  draw-a-track.ipynb  driving-only.ipynb  lidar_only.ipynb  main-ai.ipynb  main-coords.ipynb  manipulator-emulator.ipynb  manipulator-log-real.ipynb  replay-ballsbot-track.ipynb  teleoperation-via-api.ipynb  teleoperation.ipynb  test-hall-sensors.ipynb  test-imu.ipynb  (+11 more)
python_packages/ballsbot_localization/: CMakeLists.txt  ballsbot_localization.pxd  ballsbot_localization.pyx  setup.py
python_packages/ballsbot_localization/src/: common.h  free_distances.cpp  free_distances.h  geometry.cpp  geometry.h  grid.cpp  grid.h  point_cloud.cpp  point_cloud.h  test.cpp
python_packages/ballsbot_manipulator_geometry/: CMakeLists.txt  ballsbot_manipulator_geometry.h  ballsbot_manipulator_geometry.pyx  pcl.pxd  setup.py  test.cpp
ros_modules/ballsbot_camera/: CMakeLists.txt  README.md  package.xml
ros_modules/ballsbot_camera/msg/: Image.msg
ros_modules/ballsbot_camera/src/: cam_capture.cpp  cam_capture.h  publisher.cpp
ros_modules/ballsbot_detection/: CMakeLists.txt  package.xml
ros_modules/ballsbot_detection/msg/: DetectionsList.msg
ros_modules/ballsbot_detection/scripts/: publisher_detection.py
ros_modules/ballsbot_detection/src/: cam_detector.cpp  cam_detector.h  publisher.cpp
ros_modules/ballsbot_magnetic_encoder/: CMakeLists.txt  package.xml
ros_modules/ballsbot_magnetic_encoder/msg/: EncoderAngle.msg
ros_modules/ballsbot_magnetic_encoder/src/: magnetic_encoder.cpp  magnetic_encoder_driver.cpp
ros_modules/ballsbot_main/: CMakeLists.txt  package.xml
ros_modules/ballsbot_main/launch/: run_all_1_10.launch  run_all_1_16.launch  rviz.launch
ros_modules/ballsbot_main/rviz/: urdf.rviz  urdf.vcfg
ros_modules/ballsbot_main/urdf/: ballsbot.urdf  ballsbot.xml
ros_modules/ballsbot_manipulator/: CMakeLists.txt  package.xml
ros_modules/ballsbot_manipulator/src/: publisher_manipulator.cpp
ros_modules/ballsbot_pose/: CMakeLists.txt  package.xml
ros_modules/ballsbot_pose/msg/: Pose.msg
ros_modules/ballsbot_pose/src/: publisher_pose.cpp
ros_modules/ballsbot_pose_ndt/: CMakeLists.txt  package.xml
ros_modules/ballsbot_pose_ndt/msg/: FixedPose.msg
ros_modules/ballsbot_pose_ndt/src/: ndt.cpp  ndt.h  ndt_tracker.cpp  ndt_tracker.h  publisher_pose_ndt.cpp
ros_modules/ballsbot_tca9548/: CMakeLists.txt  README.md  package.xml
ros_modules/ballsbot_tca9548/msg/: EncoderAngle.msg
ros_modules/ballsbot_tca9548/src/: VL53L0X.cpp  VL53L0X.h  publisher_tca9548.cpp  tca9548.cpp  tca9548.h  tca9548_controller.cpp
ros_modules/ballsbot_ups/: CMakeLists.txt  package.xml
ros_modules/ballsbot_ups/msg/: UpsState.msg
ros_modules/ballsbot_ups/scripts/: publisher_ups.py
ros_modules/ballsbot_wheel_odometry/: CMakeLists.txt  package.xml
ros_modules/ballsbot_wheel_odometry/msg/: OdometryState.msg
ros_modules/ballsbot_wheel_odometry/scripts/: publisher_wheel_odometry.py
scripts/: make-ros-modules.sh  profile-explorer.py  run-all-legacy.sh  run-all.sh  run-ballsbot_camera.sh  run-ballsbot_detection.sh  run-ballsbot_imu.sh  run-ballsbot_laser_sensor_0.sh  run-ballsbot_laser_sensor_1.sh  run-ballsbot_laser_sensor_front.sh  run-ballsbot_laser_sensor_rear.sh  run-ballsbot_laser_sensors_change_addresses.sh  run-ballsbot_pose.sh  run-ballsbot_pose_ndt.sh  run-ballsbot_tca9548.sh  run-ballsbot_ups.sh  run-ballsbot_wheel_odometry.sh  run-jupyter.sh  run-lidar.sh  run-magnetic_encoder.sh  run-roscore.sh  run-teleoperation.sh  run_nodes.sh
stl/: car-amortizarion-fix.FCStd  car-amortizarion-fix.FCStd1  car-amortization-fix.stl  car-body.FCStd  car-body.FCStd1  car-bottom-t200.stl  car-bottom-t208.stl  car-bottom.stl  car-buffer-t208.stl  car-buffer.FCStd  car-buffer.FCStd1  car-buffer.stl  car-hall-sensors-shelf.FCStd  car-hall-sensors-shelf.FCStd1  car-hall-sensors-shelf.stl  car-jetson-basket-t200.stl  car-jetson-basket-t208.stl  car-top-t208.stl  car-top.stl  h-cable-holder.stl  h0-car-attachment.stl  h0-inner.stl  h0-outer-ring.stl  h1-inner.stl  h1-servo.stl  h1-to-h2.stl  h2-claw-top.stl  h2-left-claw.stl  h2-manipulator.stl  h2-right-claw.stl  laser-sensor-base.FCStd  laser-sensor-base.FCStd1  laser-sensor-base.stl  manipulator.FCStd  manipulator.FCStd1
(+141 files in other folders)
