<?xml version="1.0"?>
<package>
  <name>ballsbot_main</name>
  <version>1.0.0</version>
  <description>Launch files for a ballsbot project</description>
  <maintainer email="jumperpro@gmail.com">Oleg Nurtdinov</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosconsole</build_depend>
  <run_depend>rosconsole</run_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>urdf</run_depend>
  <export/>
</package>
