<?xml version="1.0"?>
<package>
  <name>ballsbot_main</name>
  <version>1.0.0</version>
  <description>Launch files for a ballsbot project</description>
  <maintainer email="jumperpro@gmail.com">Oleg Nurtdinov</maintainer>
  <license>BSD</license>
  <build_depend>rosconsole</build_depend>
  <run_depend>rosconsole</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  <export/>
</package>
